Don't clear undo/redo buffers when JS changes the value.  Bug 158071, patch by Martijn Wargers <m.wargers@hccnet.nl>, r=bryner, sr=dbaron